--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -74,6 +74,18 @@ width: 50% !important;
   border-radius: 0.375rem;
   z-index: -1;
 }
+
+.gakumasu::after {
+  background-color: #73877B;
+  content: "";
+  height: 90%;
+  width: 90%;
+  position: absolute !important;
+  bottom: 6.5%;
+  right: 8%;
+  border-radius: 0.375rem;
+  z-index: -1;
+}
 .animehw {
   height: 600px;
 }
