--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,58 +1,103 @@
 /*-----------------------------------------------
  * LOADING
 -------------------------------------------------*/
-/*.loading{
+.loading{
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 10002;
-	
+	z-index: 100004;
+	background: #73877B;
+  animation: loading 2.2s ease forwards;
 }
-.loading:before{
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+.red {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background-color: red;
+  clip-path: circle(1%);
+  animation: redcircle 0.6s ease forwards;
+  animation-delay: 1s;
 }
-.loadingElement{
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+
+.yellow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background-color: yellow;
+  clip-path: circle(1%);
+  animation: yellowcircle 0.6s ease forwards;
+  animation-delay: 1.3s;
+}
+
+.blue {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background-color: blue;
+  clip-path: circle(1%) ;
+  animation: bluecircle 0.6s ease forwards;
+  animation-delay: 1.6s;
 }
 
 
-/**
-* 共通
-**/
-/*:root {
-  --color-orange:orange;
-  --color-blue:blue;
+@keyframes loading {
+  from {
+    background: #73877B;
+  }
+  to {
+    background: #73877B;
+  }
+}
+@keyframes redcircle {
+  from{
+    clip-path: circle(1%);
+    z-index: 100005;
+  }
+  to{
+    clip-path: circle(100%);
+    z-index: 100005;
+  }
+
+}
+@keyframes yellowcircle {
+  from{
+    clip-path: circle(1%);
+    z-index: 100005;
+  }
+  to{
+    clip-path: circle(100%);
+    z-index: 100005;
+  }
+
 }
 
-.loadingCircle.-orange{
-	background-color: var(--color-orange);
+@keyframes bluecircle {
+  from{
+    clip-path: circle(1%);
+    z-index: 100005;
+  }
+  to{
+    clip-path: circle(100%);
+    z-index: 100005;
+  }
+
 }
-.loadingCircle.-blue{
-	background-color: var(--color-blue);
-}
-.loadingCircle.-white{
-	background-color: #fafaeb;
-}
-
-
-
-
 
 /*loading*/
+[data-aos="zoom-in"] {
+  transition-delay: 2.2s !important ;
+}
 
 .bg-primary {
   background-color: #73877B !important;
@@ -123,8 +168,8 @@ width: 50% !important;
   height: 90%;
   width: 90%;
   position: absolute !important;
-  bottom: 8%;
-  right: 8%;
+  bottom: 1.3vw;
+  right: 2.7vw;
 
   border-radius: 0.375rem;
   z-index: -1;
@@ -136,8 +181,8 @@ width: 50% !important;
   height: 90%;
   width: 90%;
   position: absolute !important;
-  bottom: 6.5%;
-  right: 8%;
+  bottom: 1.3vw;
+  right: 2.7vw;
   border-radius: 0.375rem;
   z-index: -1;
 }
