--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,10 @@
+html {
+  overflow-x: hidden !important;
+}
+
+/** {
+  border: 2px solid red;
+}
 /*-----------------------------------------------
  * LOADING
 -------------------------------------------------*/
@@ -97,6 +104,16 @@
 /*loading*/
 [data-aos="zoom-in"] {
   transition-delay: 2.2s !important ;
+}
+
+.about-bg{
+  background: url(../assets/img/こんにちは.png) no-repeat center transparent;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  padding-right: 0 !important;
+  margin-right: 0 !important;
+  max-width: 100%;
 }
 
 .bg-primary {
@@ -235,9 +252,6 @@ width: 50% !important;
 }
 }
 
-.animehw {
-  height: 600px;
-}
 
 .int1 {
   padding-bottom: 200px !important;
@@ -260,4 +274,17 @@ width: 50% !important;
 
 .anime-size {
   width: 80% !important;
+}
+
+.skill-jump:hover {
+  position: relative !important;
+  bottom: 10px !important;
+}
+
+.card-text {
+  color: #73877B !important;
+}
+
+#currentTime,#duration,.modal-title,.card-title {
+  color: #4A556D !important;
 }
